<resources>
    <string name="app_name">高支模可视化</string>
    <string name="Account">账号:</string>
    <string name="Password">密码:</string>
    <string name="text_load">登录</string>
    <string name="tip">注册账号</string>
    <string name="Logo">图标</string>
    <string name="confrm">确定</string>
    <string name="newaccount">新账号：</string>
    <string name="newpassword">密码：</string>
    <string name="confirmpassword">确认密码:</string>
    <string name="quit">退出</string>
    <string name="radiobutton1">模型1</string>
    <string name="radiobutton2">模型2</string>
    <string name="radiobutton3">模型3</string>
    <string name="model1">model1</string>
    <string name="createnew">新建</string>
    <string name="tip2">请选择模型</string>

    <string name="MY_DATA">my_data</string>
    <string name="USERNAME">username</string>
    <string name="PASSWORD">password</string>
    <string name="defValue"></string>
    <string name="textview">账户信息：\n</string>
    <string name="clear">clear</string>
    <string name="update">update</string>
    <string name="insert">insert</string>
    <string name="delete">delete</string>
    <string name="localip">本地ip和端口号</string>
    <string name="model">model</string>

</resources>