<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:contexts=".NewAccountActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/newaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="119dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/newaccount"
        android:inputType="textShortMessage|textEmailAddress"
        android:maxLength="8"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/newpassword"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/newaccount"
        app:layout_constraintStart_toStartOf="@+id/newaccount"
        app:layout_constraintTop_toBottomOf="@+id/newaccount" />

    <EditText
        android:id="@+id/confirmnewpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/newpassword"
        app:layout_constraintStart_toStartOf="@+id/newpassword"
        app:layout_constraintTop_toBottomOf="@+id/newpassword" />

    <Button
        android:id="@+id/buttonconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/confrm"
        app:layout_constraintEnd_toEndOf="@+id/confirmnewpassword"
        app:layout_constraintStart_toStartOf="@+id/confirmnewpassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmnewpassword" />

    <Button
        android:id="@+id/buttonquit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/white"
        android:text="@string/quit"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>